0.1.0
Added: Main materials now display their tier in the tooltip
Changed: Hammers and excavators are faster (50% penalty instead of 75%)
Fixed: Broken tools still appearing broken after repair

0.0.11
Updated for Silent Lib 2.3.18
Added: Missing texture for spoon upgrade

0.0.10
Added: Blaze/end rods are now tool rods
Added: Quartz-tipped upgrade
Added: Reach distance stat ("reach_distance" in the JSON files)
Added: Spoon upgrade, allows pickaxes to work as shovels
Added: Red card upgrade, allows items to break permanently (could be useful in machines that use tools...)
Added: Root advancement gives players some blueprints
Added: More JEI example recipes (applying tip upgrades, for instance)
Added: JEI info pages for many items (more to come)
Changed: Tool/armor items now give just a few randomized samples, instead of one for each main material (less JEI lag)
Changed: Tooltips for tool heads improved, removed some redundant information
Fixed: Crafting station now works with the '+' (move items) button in JEI
Numerous tweaks and minor fixes

0.0.9
Added: Katanas
Added: Machetes
Added: Excavators (AOE shovels)
Fixed: Crafting station losing inventory when broken (#2)

0.0.8
Added: Missing textures and models
Changed: Dried sinew is now a smelting recipe
Fixed: Some armor items not being colored

0.0.7 (preview 7, 1.12.2)
Added: New main parts: obsidian, netherrack, and terracotta
Added: Config to specify items that work with block-placing tools. Default list includes dank/null and a couple other items.
Changed: Improvements to how gear part data is passed around, which seems to improve frame rate (FPS)
Changed: Gear can no longer be repaired with lower-tier materials
Changed: Un-nerfed vanilla hoes. You're welcome.
Fixed: Materials not considering grade when displaying stats
Fixed: Armor durability being silly (added "armor durability" stat to correct this)
Fixed: Armor breaking permanently (hopefully)
Fixed: A rare(?) crash with hammers