@@ -1,0 +1,23 @@
+{
+    "display": {
+        "icon": {
+            "item": "minecraft:flint"
+        },
+        "title": {
+            "translate": "advancements.silentgear.repair_from_broken.title"
+        },
+        "description": {
+            "translate": "advancements.silentgear.repair_from_broken.description"
+        }
+    },
+    "parent": "silentgear:pickaxe",
+    "criteria": {
+        "repair": {
+            "trigger": "silentlib:generic_int",
+            "conditions": {
+                "type": "silentgear:repair_from_broken",
+                "value": 1
+            }
+        }
+    }
+}
