@@ -1,0 +1,23 @@
+{
+    "display": {
+        "icon": {
+            "item": "silentgear:tip_upgrade_redstone"
+        },
+        "title": {
+            "translate": "advancements.silentgear.tip_upgrade.title"
+        },
+        "description": {
+            "translate": "advancements.silentgear.tip_upgrade.description"
+        }
+    },
+    "parent": "silentgear:upgrade_base",
+    "criteria": {
+        "apply_to_tool": {
+            "trigger": "silentlib:generic_int",
+            "conditions": {
+                "type": "silentgear:apply_tip_upgrade",
+                "value": 1
+            }
+        }
+    }
+}
